bugfix/button-menu/mob

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -62,9 +62,12 @@
         <li class="mobile-item"><a class="mobile-link" href="#how-we-do">Training options</a></li>
         <li class="mobile-item"><a class="mobile-link" href="#registration">Contacts</a></li>
       </ul>
-      <button type="button" class="mobile-order-button button" data-modal-open>
-        CONSULTATION BY PHONE
-      </button>
+      <div class="btn-wrapper-mob-menu">
+        <span class="button-text-mask-mob-menu">consultation by phone</span>
+        <button type="button" class="mobile-order-button button" data-modal-open>
+          CONSULTATION BY PHONE
+        </button>
+      </div>
     </div>
   </div>
 </header>
