--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -42,6 +42,17 @@
         height: 70px;
     }
 }
+.btn-wrapper-mob-menu {
+    position: relative;
+    width: 260px;
+    height: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    border: 2px solid $accent-color;
+
+    transition: 0.5s;
+}
 
 .button {
     padding: 15px 5px;
@@ -83,7 +94,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    width: 100%;
+    width: 101%;
     // height: 100%;
     font-weight: 700;
     white-space: nowrap;
@@ -100,6 +111,23 @@
         font-size: 14px;
         letter-spacing: 0.08em;
     }
+}
+
+.button-text-mask-mob-menu {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 101%;
+    // height: 100%;
+    text-align: center;
+
+    font-weight: 700;
+    white-space: nowrap;
+    text-transform: uppercase;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+    color: $accent-color;
+    overflow: hidden;
 }
 
 .color-hover-hero {
