--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -167,19 +167,19 @@
   }
 }
 .mobile-order-button {
-  font-size: 14px;
-  letter-spacing: 0.14em;
+  // font-size: 14px;
+  // letter-spacing: 0.14em;
   background-color: transparent;
   color: $accent-color;
-  &:focus,
-  &:hover {
-    color: #fcf0e8;
-    background-color: #ff6b0936;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  }
+  //   &:focus,
+  //   &:hover {
+  //     color: #fcf0e8;
+  //     background-color: #ff6b0936;
+  //     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  //   }
 }
 @media screen and (min-width: 768px) {
-  .mobile-order-button {
+  .btn-wrapper-mob-menu {
     display: none;
   }
   .mobile-link {
