--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,34 +1,42 @@
 <footer class="footer">
   <div class="contacts-section container">
     <div class="footer-logo">
-        <a class="logo">
-            <span class="logo-text">
-                Hell
-                <svg class="logo-icon">
-                    <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg>
-                EN
-            </span> <span class="logo-text-accent"> hellish </span> english
-        </a>
+      <a class="logo link" href="#">
+        <span class="logo-text">
+          Hell
+          <svg class="logo-icon">
+            <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+          </svg>
+          EN
+        </span>
+        <span class="logo-text-accent"> hellish </span> english
+      </a>
     </div>
     <div class="footer-contacts">
-        <ul class="footer-contacts-list list">
-            <li>
-                <a class="phone-link link" href="tel:+380000000000">
-                    <svg class="phone-icon">
-                        <use href="./images/icons/sprite.svg#icon-phone"></use>
-                    </svg>
-                    +38 (000) 000 00 00</a>
-            </li>
-            <li>
-                <a href="#">
-                <img class="instagram-icon" alt="instagram" src="./images/icons/instagram1.svg" width="40" height="40">
-                </a>
-            </li>
-        </ul>   
+      <ul class="footer-contacts-list list">
+        <li>
+          <a class="phone-link link" href="tel:+380000000000">
+            <svg class="phone-icon">
+              <use href="./images/icons/sprite.svg#icon-phone"></use>
+            </svg>
+            +38 (000) 000 00 00</a
+          >
+        </li>
+        <li>
+          <a href="#">
+            <img
+              class="instagram-icon"
+              alt="instagram"
+              src="./images/icons/instagram1.svg"
+              width="40"
+              height="40"
+            />
+          </a>
+        </li>
+      </ul>
     </div>
-    </div>
-    <div class="copyright">
-        <p class="container copyright-text">@ All rights reserved, 2019</p>
-    </div>
+  </div>
+  <div class="copyright">
+    <p class="container copyright-text">@ All rights reserved, 2019</p>
+  </div>
 </footer>
