--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-container container">
     <nav class="header-nav">
-      <a class="logo" mobile-logo>
+      <a class="logo link" href="#" mobile-logo>
         <span class="logo-text">
           Hell
           <svg class="logo-icon">
