bagfix/button-menu
Кнопка хедера переделана
Кнопка меню моб переделана

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,7 +25,7 @@
       </ul>
     </nav>
     <div class="header-btn-container">
-      <button type="button" class="header-order-button button" data-modal-open>
+      <button type="button" class="button-heder-menu" data-modal-open>
         consultation by phone
       </button>
       <button class="hamburger hamburger--emphatic" type="button" burger>
@@ -45,12 +45,9 @@
         <li class="mobile-item"><a class="mobile-link" href="#how-we-do">Training options</a></li>
         <li class="mobile-item"><a class="mobile-link" href="#registration">Contacts</a></li>
       </ul>
-      <div class="btn-wrapper-mob-menu">
-        <span class="button-text-mask-mob-menu">consultation by phone</span>
-        <button type="button" class="mobile-order-button button" data-modal-open-2>
-          CONSULTATION BY PHONE
-        </button>
-      </div>
+      <button type="button" class="button-mob-menu" data-modal-open-2>
+        CONSULTATION BY PHONE
+      </button>
     </div>
   </div>
 </header>
