--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,19 +1,55 @@
-.mobileorder-button {
+.button-mob-menu {
     display: block;
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 1.21;
-    letter-spacing: 0.14em;
-    text-transform: uppercase;
-    background-color: rgba(17, 21, 24, 0.9);
-    cursor: pointer;
-    color: $accent-color;
-    border: 2px solid $accent-color;
-    padding: 27px 24px;
     margin-left: auto;
     margin-right: auto;
+    width: 260px;
+    height: 48px;
+    overflow: hidden;
+    border: 2px solid $accent-color;
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: 700;
+    white-space: nowrap;
+    text-transform: uppercase;
+    line-height: 1.2;
+    background-color: transparent;
+    color: $accent-color;
+    &:focus,
+    &:hover {
+        color: #fcf0e8;
+        background-color: #ff6b0936;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+}
+.button-heder-menu {
+    width: 260px;
+    height: 48px;
+    overflow: hidden;
+    border: 2px solid $accent-color;
+    font-family: "Montserrat";
+    font-size: 14px;
+    white-space: nowrap;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1.2;
+    letter-spacing: 0.12em;
+
+    background-color: transparent;
+    color: $accent-color;
+    transition: 0.5s;
+    cursor: pointer;
+
+    &:focus,
+    &:hover {
+        color: $primary-white-color;
+        background-color: $accent-color;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+}
+@media screen and (max-width: 767px) {
+    .button-heder-menu {
+        display: none;
+    }
 }
 
 @mixin button($bcolor, $url, $x1, $y1, $bor, $col) {
@@ -33,6 +69,7 @@
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
+    border: none;
     border: 2px solid $accent-color;
 
     transition: 0.5s;
@@ -42,16 +79,19 @@
         height: 70px;
     }
 }
-.btn-wrapper-mob-menu {
+
+.wrapper-btn-heder {
     position: relative;
     width: 260px;
     height: 48px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow: hidden;
     border: 2px solid $accent-color;
-
-    transition: 0.5s;
+    @media screen and (max-width: 767px) {
+        display: none;
+    }
+    @media screen and (min-width: 1366px) {
+        width: 354px;
+        height: 70px;
+    }
 }
 
 .button {
@@ -103,29 +143,23 @@
     letter-spacing: 0.08em;
     color: $primary-white-color;
     overflow: hidden;
-    @media screen and (max-width: 767px) {
-        display: none;
-    }
     @media screen and (min-width: 1366px) {
         padding: 25px 2px;
         font-size: 14px;
-        letter-spacing: 0.08em;
     }
 }
 
-.button-text-mask-mob-menu {
+.btn-text-mask {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: 101%;
     // height: 100%;
     text-align: center;
-
+    font-size: 14px;
     font-weight: 700;
-    white-space: nowrap;
     text-transform: uppercase;
-    line-height: 1.2;
-    letter-spacing: 0.08em;
+    letter-spacing: 0.12em;
     color: $accent-color;
     overflow: hidden;
 }
@@ -133,13 +167,6 @@
 .color-hover-hero {
     text-align: center;
     color: $accent-color;
-}
-
-.btn-heder-hover {
-    text-align: center;
-    color: $accent-color;
-    font-size: 14px;
-    letter-spacing: 0.14em;
 }
 
 .button-heder {
