--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,9 +25,7 @@
       </ul>
     </nav>
     <div class="header-btn-container">
-      <button type="button" class="button-heder-menu" data-modal-open>
-        consultation by phone
-      </button>
+      <button type="button" class="button-heder-menu" data-modal-open>consultation by phone</button>
       <button class="hamburger hamburger--emphatic" type="button" burger>
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
@@ -39,15 +37,17 @@
     <div class="mobile-header-container">
       <ul class="mobile-list list">
         <li class="mobile-item">
-          <a class="mobile-link mobilemenu-current" href="#program">Studying program</a>
+          <a class="mobile-link mobilemenu-current" href="#program" burger-1>Studying program</a>
         </li>
-        <li class="mobile-item"><a class="mobile-link" href="#about">About</a></li>
-        <li class="mobile-item"><a class="mobile-link" href="#how-we-do">Training options</a></li>
-        <li class="mobile-item"><a class="mobile-link" href="#registration">Contacts</a></li>
+        <li class="mobile-item"><a class="mobile-link" href="#about" burger-2>About</a></li>
+        <li class="mobile-item">
+          <a class="mobile-link" href="#how-we-do" burger-3>Training options</a>
+        </li>
+        <li class="mobile-item">
+          <a class="mobile-link" href="#registration" burger-4>Contacts</a>
+        </li>
       </ul>
-      <button type="button" class="button-mob-menu" data-modal-open-2>
-        CONSULTATION BY PHONE
-      </button>
+      <button type="button" class="button-mob-menu" data-modal-open-2>CONSULTATION BY PHONE</button>
     </div>
   </div>
 </header>
