--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
-<footer class="footer">
+<footer class="footer" id="bottom">
   <div class="contacts-section container">
     <div class="footer-logo">
-      <a class="logo link" href="#">
+      <a class="logo link" href="#top">
         <span class="logo-text">
           Hell
           <svg class="logo-icon">
