--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
-<header class="header">
+<header class="header" id="top">
   <div class="header-container container">
     <nav class="header-nav">
-      <a class="logo link" href="#" mobile-logo>
+      <a class="logo link" href="#bottom" mobile-logo>
         <span class="logo-text">
           Hell
           <svg class="logo-icon">
