--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,15 +6,15 @@
 
   <form class="contacts-form">
     <div class="form-wrapper position-name">
-      <input class="contacts-form-input invalid-input" type="text" name="user-name" id="username" placeholder=" "
+      <input class="contacts-form-input invalid-input" type="text" name="user-name" id="username" placeholder="Name*"
         autocomplete="off" pattern="[A-Za-zА-Яа-яЁё]{4,}" title="не менее 4 буквы" />
-      <label class="form-label" for="username">Name*</label>
+      <label class="form-label" for="username"></label>
     </div>
 
     <div class="form-wrapper position-phone">
-      <input class="contacts-form-input invalid-input" type="tel" name="user-tel" id="phone" placeholder=" "
-        autocomplete="off" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="000-000-00-00" />
-      <label class="form-label" for="phone">Phone*</label>
+      <input class="contacts-form-input invalid-input" type="tel" name="user-tel" id="phone" placeholder="Phone*"
+        autocomplete="off" pattern="[0-9]{10}" title="050-000-00-00" />
+      <label class="form-label" for="phone"></label>
     </div>
     <div class="btn-wrapper">
       <span class="button-text-mask">i want a free lesson</span>
