--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -123,7 +123,13 @@
     display: flex;
     flex-direction: column;
 }
-
+.contacts-form-input::placeholder {
+    color: $primary-white-color;
+    font-size: 14px;
+    @media screen and (min-width: 1366px) {
+        font-size: 20px;
+    }
+}
 .contacts-form-input {
     display: inline-block;
     width: 100%;
