--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,7 +1,7 @@
 .review {
   background-color: white;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .review-title {
@@ -113,7 +113,7 @@
     padding-left: 86px;
     padding-right: 86px;
     padding-top: 65px;
-    padding-bottom: 65px;
+    padding-bottom: 130px; //was 65
   }
 
   .review-title {
