--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,5 +1,5 @@
 .advantages {
-  padding: 30px 0 45px;
+  padding: 30px 0 44px; //was 45
 
   @media screen and (min-width: 768px) {
     padding: 46px 0;
@@ -44,18 +44,18 @@
 
 .advantage-item {
   &::before {
-  background-image: url(../images/icons/advantage-icon3.svg);
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
+    background-image: url(../images/icons/advantage-icon3.svg);
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
 
-  width: 60px;
-  height: 60px;
+    width: 60px;
+    height: 60px;
 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 
     @media screen and (min-width: 1366px) {
       background-image: url(../images/icons/advantage-icon3-desc.svg);
@@ -63,27 +63,26 @@
       height: 102px;
     }
   }
-
 }
 
 .advantage-item:nth-child(2) {
   &::before {
     background-image: url(../images/icons/advantage-icon2.svg);
 
-      @media screen and (min-width: 1366px) {
-        background-image: url(../images/icons/advantage-icon2-desc.svg);
-      }
-     }
+    @media screen and (min-width: 1366px) {
+      background-image: url(../images/icons/advantage-icon2-desc.svg);
+    }
+  }
 }
 
 .advantage-item:nth-child(3) {
   &::before {
     background-image: url(../images/icons/advantage-icon1.svg);
 
-      @media screen and (min-width: 1366px) {
-        background-image: url(../images/icons/advantage-icon1-desc.svg);
-      }
+    @media screen and (min-width: 1366px) {
+      background-image: url(../images/icons/advantage-icon1-desc.svg);
     }
+  }
 }
 
 .advantage-title {
@@ -93,7 +92,7 @@
   height: 60px;
 
   padding-left: 70px;
-  
+
   font-size: 14px;
   font-weight: 700;
   line-height: 1.64;
@@ -110,8 +109,7 @@
 .advantage-list .advantage-item {
   transform: translateY(220%);
   opacity: 0;
-  transition: transform 1000ms ease 0ms,
-  opacity 1000ms ease 0ms;
+  transition: transform 1000ms ease 0ms, opacity 1000ms ease 0ms;
 }
 
 .advantage-list._active .advantage-item {
@@ -120,20 +118,13 @@
 }
 
 .advantage-list._active .advantage-item:nth-child(1) {
-  transition: transform 1000ms ease 0ms,
-  opacity 1000ms ease 300ms;
+  transition: transform 1000ms ease 0ms, opacity 1000ms ease 300ms;
 }
 
 .advantage-list._active .advantage-item:nth-child(2) {
-  transition: transform 1000ms ease 300ms,
-  opacity 1000ms ease 600ms;
+  transition: transform 1000ms ease 300ms, opacity 1000ms ease 600ms;
 }
 
 .advantage-list._active .advantage-item:nth-child(3) {
-  transition: transform 1000ms ease 600ms,
-  opacity 1000ms ease 900ms;
+  transition: transform 1000ms ease 600ms, opacity 1000ms ease 900ms;
 }
-
-
-
-
