--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -36,7 +36,7 @@
                     </li>
 
                 </ul>
-
+             <div class="text-box">
                 <p class="text-descr">
                     Graduated from the Institute of International Relations of the NAU with a degree in
                     translator-analyst. </p>
@@ -49,6 +49,7 @@
                     (Berkeley),
                     The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of
                     Houston). </p>
+                    </div>
                 <a class="about-link" target="_blank" rel="noreferrer noopener"
                     aria-label="This is an external link (opens in a new tab)"
                     href="https://www.cambridgeenglish.org/">Cambrige English Entry Level
