--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -13,7 +13,7 @@
 
     <div class="form-wrapper position-phone">
       <input class="contacts-form-input invalid-input" type="tel" name="user-tel" id="phone" placeholder="Phone*"
-        autocomplete="off" pattern="[0-9]{10}" title="050-000-00-00" />
+        autocomplete="off" pattern="[0-9]{3}-[0-9]{2}-[0-9]{2}" title="238-38-38" />
       <label class="form-label" for="phone"></label>
     </div>
     <div class="btn-wrapper">
