Change hero image position

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,7 @@
         </h1>
         <p class="hero-text">It won’t be easy.</p>
         <b class="hero-guarantee">
-          But you’re guaranteed to get <br>
+          But you’re guaranteed to get
           <span class="hero-guarantee-accent">+25 points</span>
         </b>
       </div>
