Clear unneccesary code

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -139,7 +139,7 @@ ol {
   }
 }
 
->>>>>>>main .mobileorder-button {
+.mobileorder-button {
   display: block;
   font-family: Montserrat;
   font-style: normal;
