Fix reviews section geometry

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -110,10 +110,8 @@
   }
 
   .review {
-    padding-left: 86px;
-    padding-right: 86px;
     padding-top: 65px;
-    padding-bottom: 130px; //was 65
+    padding-bottom: 130px;
   }
 
   .review-title {
